{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 35,
  "lineage": "492008d1-71c2-049e-6fb4-fc1f62b5698b",
  "resources": [
    {
      "module": "module.ni-mod",
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "data-pi",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "pi1",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/eb207d43-84ba-47e7-9cc8-b80d01a978ef/resourceGroups/welcome-rg1/providers/Microsoft.Network/publicIPAddresses/welcome-pip1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.171.228.50",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "welcome-pip1",
            "resource_group_name": "welcome-rg1",
            "sku": "Standard"
          }
        }
      ]
    },
    {
      "module": "module.ni-mod",
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "data-sn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "sn1",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.10.0/28",
            "address_prefixes": [
              "10.1.10.0/28"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/eb207d43-84ba-47e7-9cc8-b80d01a978ef/resourceGroups/welcome-rg1/providers/Microsoft.Network/virtualNetworks/welcome-vn1/subnets/welcome-sn11",
            "name": "welcome-sn11",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "welcome-rg1",
            "virtual_network_name": "welcome-vn1"
          }
        }
      ]
    },
    {
      "module": "module.ni-mod",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "ni-block",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "ni1",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/eb207d43-84ba-47e7-9cc8-b80d01a978ef/resourceGroups/welcome-rg1/providers/Microsoft.Network/networkInterfaces/welcome-ni1",
            "internal_domain_name_suffix": "2qa3yqz1b21e1bqlikbji5lvra.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "welcome-ip1",
                "primary": true,
                "private_ip_address": "10.1.10.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/eb207d43-84ba-47e7-9cc8-b80d01a978ef/resourceGroups/welcome-rg1/providers/Microsoft.Network/publicIPAddresses/welcome-pip1",
                "subnet_id": "/subscriptions/eb207d43-84ba-47e7-9cc8-b80d01a978ef/resourceGroups/welcome-rg1/providers/Microsoft.Network/virtualNetworks/welcome-vn1/subnets/welcome-sn11"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "welcome-ni1",
            "private_ip_address": "10.1.10.4",
            "private_ip_addresses": [
              "10.1.10.4"
            ],
            "resource_group_name": "welcome-rg1"
          },
          "dependencies": [
            "module.ni-mod.data.azurerm_public_ip.data-pi",
            "module.ni-mod.data.azurerm_subnet.data-sn",
            "module.pi-mod.azurerm_public_ip.pi-block",
            "module.rg-mod.azurerm_resource_group.rg-block",
            "module.sn-mod.azurerm_subnet.sn-block",
            "module.vn-mod.azurerm_virtual_network.vn-block"
          ]
        }
      ]
    },
    {
      "module": "module.nsg-mod",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg-block",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "nsg1",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/eb207d43-84ba-47e7-9cc8-b80d01a978ef/resourceGroups/welcome-rg1/providers/Microsoft.Network/networkSecurityGroups/welcome-nsg1",
            "location": "eastus",
            "name": "welcome-nsg1",
            "resource_group_name": "welcome-rg1",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "test123",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rg-mod.azurerm_resource_group.rg-block"
          ]
        }
      ]
    },
    {
      "module": "module.nsgni-mod",
      "mode": "data",
      "type": "azurerm_network_interface",
      "name": "data-ni",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "nsgni1",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/eb207d43-84ba-47e7-9cc8-b80d01a978ef/resourceGroups/welcome-rg1/providers/Microsoft.Network/networkInterfaces/welcome-ni1",
            "ip_configuration": [
              {
                "name": "welcome-ip1",
                "primary": true,
                "private_ip_address": "10.1.10.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/eb207d43-84ba-47e7-9cc8-b80d01a978ef/resourceGroups/welcome-rg1/providers/Microsoft.Network/publicIPAddresses/welcome-pip1",
                "subnet_id": "/subscriptions/eb207d43-84ba-47e7-9cc8-b80d01a978ef/resourceGroups/welcome-rg1/providers/Microsoft.Network/virtualNetworks/welcome-vn1/subnets/welcome-sn11"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "welcome-ni1",
            "private_ip_address": "10.1.10.4",
            "private_ip_addresses": [
              "10.1.10.4"
            ],
            "resource_group_name": "welcome-rg1"
          }
        }
      ]
    },
    {
      "module": "module.nsgni-mod",
      "mode": "data",
      "type": "azurerm_network_security_group",
      "name": "data-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "nsgni1",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/eb207d43-84ba-47e7-9cc8-b80d01a978ef/resourceGroups/welcome-rg1/providers/Microsoft.Network/networkSecurityGroups/welcome-nsg1",
            "location": "eastus",
            "name": "welcome-nsg1",
            "resource_group_name": "welcome-rg1",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "test123",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.nsgni-mod",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "nsgni1",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/eb207d43-84ba-47e7-9cc8-b80d01a978ef/resourceGroups/welcome-rg1/providers/Microsoft.Network/networkInterfaces/welcome-ni1|/subscriptions/eb207d43-84ba-47e7-9cc8-b80d01a978ef/resourceGroups/welcome-rg1/providers/Microsoft.Network/networkSecurityGroups/welcome-nsg1",
            "network_interface_id": "/subscriptions/eb207d43-84ba-47e7-9cc8-b80d01a978ef/resourceGroups/welcome-rg1/providers/Microsoft.Network/networkInterfaces/welcome-ni1",
            "network_security_group_id": "/subscriptions/eb207d43-84ba-47e7-9cc8-b80d01a978ef/resourceGroups/welcome-rg1/providers/Microsoft.Network/networkSecurityGroups/welcome-nsg1"
          },
          "dependencies": [
            "module.ni-mod.azurerm_network_interface.ni-block",
            "module.ni-mod.data.azurerm_public_ip.data-pi",
            "module.ni-mod.data.azurerm_subnet.data-sn",
            "module.nsg-mod.azurerm_network_security_group.nsg-block",
            "module.nsgni-mod.data.azurerm_network_interface.data-ni",
            "module.nsgni-mod.data.azurerm_network_security_group.data-nsg",
            "module.pi-mod.azurerm_public_ip.pi-block",
            "module.rg-mod.azurerm_resource_group.rg-block",
            "module.sn-mod.azurerm_subnet.sn-block",
            "module.vn-mod.azurerm_virtual_network.vn-block"
          ]
        }
      ]
    },
    {
      "module": "module.pi-mod",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pi-block",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "pi1",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/eb207d43-84ba-47e7-9cc8-b80d01a978ef/resourceGroups/welcome-rg1/providers/Microsoft.Network/publicIPAddresses/welcome-pip1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.171.228.50",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "welcome-pip1",
            "resource_group_name": "welcome-rg1",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.rg-mod.azurerm_resource_group.rg-block"
          ]
        }
      ]
    },
    {
      "module": "module.sn-mod",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "sn-block",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "sn1",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.10.0/28"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/eb207d43-84ba-47e7-9cc8-b80d01a978ef/resourceGroups/welcome-rg1/providers/Microsoft.Network/virtualNetworks/welcome-vn1/subnets/welcome-sn11",
            "name": "welcome-sn11",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "welcome-rg1",
            "virtual_network_name": "welcome-vn1"
          },
          "dependencies": [
            "module.rg-mod.azurerm_resource_group.rg-block",
            "module.vn-mod.azurerm_virtual_network.vn-block"
          ]
        }
      ]
    },
    {
      "module": "module.vm-mod",
      "mode": "data",
      "type": "azurerm_network_interface",
      "name": "nidata1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "ni1",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/eb207d43-84ba-47e7-9cc8-b80d01a978ef/resourceGroups/welcome-rg1/providers/Microsoft.Network/networkInterfaces/welcome-ni1",
            "ip_configuration": [
              {
                "name": "welcome-ip1",
                "primary": true,
                "private_ip_address": "10.1.10.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/eb207d43-84ba-47e7-9cc8-b80d01a978ef/resourceGroups/welcome-rg1/providers/Microsoft.Network/publicIPAddresses/welcome-pip1",
                "subnet_id": "/subscriptions/eb207d43-84ba-47e7-9cc8-b80d01a978ef/resourceGroups/welcome-rg1/providers/Microsoft.Network/virtualNetworks/welcome-vn1/subnets/welcome-sn11"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "welcome-ni1",
            "private_ip_address": "10.1.10.4",
            "private_ip_addresses": [
              "10.1.10.4"
            ],
            "resource_group_name": "welcome-rg1"
          }
        }
      ]
    },
    {
      "module": "module.vn-mod",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vn-block",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vn1",
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "43dc01e4-0f3b-4d36-860b-4282947d7588",
            "id": "/subscriptions/eb207d43-84ba-47e7-9cc8-b80d01a978ef/resourceGroups/welcome-rg1/providers/Microsoft.Network/virtualNetworks/welcome-vn1",
            "location": "eastus",
            "name": "welcome-vn1",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "welcome-rg1"
          },
          "dependencies": [
            "module.rg-mod.azurerm_resource_group.rg-block"
          ]
        }
      ]
    }
  ]
}